log/build_2022-03-23_13-54-53/dbr_pubsub/stderr.log
  File "/home/nayab/dev_ws/install/dbr_pubsub/lib/python3.8/site-packages/dbr_pubsub/rc_data_emu.py", line 100
    ``
    ^
SyntaxError: invalid syntax

